# src/controllers/auth.controller.ts
@@ -1,139 +1,187 @@
-import { Request, Response } from "express";
+import {Request, Response} from "express";
 import * as Yup from "yup";
 import UserModel from "../models/user.model";
-import { encrypt } from "../utils/encryption";
-import { generateToken } from "../utils/jwt";
-import { IReqUser } from "../middlewares/auth.middleware";
+import {encrypt} from "../utils/encryption";
+import {generateToken} from "../utils/jwt";
+import {IReqUser} from "../middlewares/auth.middleware";
 
 type TRegister = {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  confirmPassword: string;
+    fullName: string;
+    username: string;
+    email: string;
+    password: string;
+    confirmPassword: string
 };
 
 type TLogin = {
-  identifier: string;
-  password: string;
+    identifier: string;
+    password: string;
 };
 
 const registerValidateSchema = Yup.object({
-  fullName: Yup.string().required(),
-  username: Yup.string().required(),
-  email: Yup.string().email().required(),
-  password: Yup.string().required(),
-  confirmPassword: Yup.string()
-    .required()
-    .oneOf([Yup.ref("password"), ""], "Password is not match"),
+    fullName: Yup.string().required(),
+    username: Yup.string().required(),
+    email: Yup.string().email().required(),
+    password: Yup.string().required().min(6, "Password must be at least 6 character").test("at-leat-one-uppercase", "Password must contain one uppercase", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+    }).test("at-leat-one-number", "Password must contain one number", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+    }),
+    confirmPassword: Yup.string()
+        .required()
+        .oneOf([Yup.ref("password"), ""], "Password is not match"),
 });
 
 export default {
-  async register(req: Request, res: Response) {
-    const { fullName, username, email, password, confirmPassword } =
-      req.body as unknown as TRegister;
-    try {
-      await registerValidateSchema.validate({
-        fullName,
-        username,
-        email,
-        password,
-        confirmPassword,
-      });
+    async register(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         */
+        const {fullName, username, email, password, confirmPassword} =
+            req.body as unknown as TRegister;
+        try {
+            await registerValidateSchema.validate({
+                fullName,
+                username,
+                email,
+                password,
+                confirmPassword,
+            });
 
-      const result = await UserModel.create({
-        fullName,
-        username,
-        email,
-        password,
-      });
+            const result = await UserModel.create({
+                fullName,
+                username,
+                email,
+                password,
+            });
 
-      res.status(200).json({
-        message: "Success",
-        data: result,
-      });
-    } catch (e) {
-      const err = e as unknown as Error;
-      res.status(400).json({
-        message: err.message,
-        data: null,
-      });
+            res.status(200).json({
+                message: "Success",
+                data: result,
+            });
+        } catch (e) {
+            const err = e as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+    async login(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+         required: true,
+         schema: {$ref: "#/components/schemas/LoginRequest"}
+         }
+         */
+        const {identifier, password} = req.body as unknown as TLogin;
+
+        try {
+            const userByIdentifier = await UserModel.findOne({
+                $or: [
+                    {
+                        email: identifier,
+                    },
+                    {
+                        username: identifier,
+                    },
+                ],
+                isActive: true
+            });
+
+            if (!userByIdentifier) {
+                return res.status(403).json({
+                    message: "user not found",
+                    data: null,
+                });
+            }
+
+            const validatePassword: boolean =
+                encrypt(password) === userByIdentifier.password;
+
+            if (!validatePassword) {
+                return res.status(403).json({
+                    message: "user not found",
+                    data: null,
+                });
+            }
+
+            const token = generateToken({
+                id: userByIdentifier._id,
+                role: userByIdentifier.role,
+            });
+
+            res.status(200).json({
+                message: "Login success",
+                data: token,
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+    async me(req: IReqUser, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.security = [{
+         "bearerAuth": []
+         }]
+         */
+        try {
+            const user = req.user;
+            const result = await UserModel.findById(user?.id);
+            res.status(200).json({
+                message: "Success Login",
+                data: result,
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+         required: true,
+         schema:{$ref: '#/components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const {code} = req.body as { code: string };
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code
+                },
+                {
+                    isActive: true
+                },
+                {
+                    new: true
+                }
+            );
+
+            res.status(200).json({
+                message: "User successfully activated",
+                data: user
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
     }
-  },
-  async login(req: Request, res: Response) {
-    /**
-     #swagger.requestBody = {
-      required: true,
-      schema: {$ref: "#/components/schemas/LoginRequest"}
-     }
-     */
-    const { identifier, password } = req.body as unknown as TLogin;
-
-    try {
-      const userByIdentifier = await UserModel.findOne({
-        $or: [
-          {
-            email: identifier,
-          },
-          {
-            username: identifier,
-          },
-        ],
-      });
-
-      if (!userByIdentifier) {
-        return res.status(403).json({
-          message: "user not found",
-          data: null,
-        });
-      }
-
-      const validatePassword: boolean =
-        encrypt(password) === userByIdentifier.password;
-
-      if (!validatePassword) {
-        return res.status(403).json({
-          message: "user not found",
-          data: null,
-        });
-      }
-
-      const token = generateToken({
-        id: userByIdentifier._id,
-        role: userByIdentifier.role,
-      });
-
-      res.status(200).json({
-        message: "Login success",
-        data: token,
-      });
-    } catch (error) {
-      const err = error as unknown as Error;
-      res.status(400).json({
-        message: err.message,
-        data: null,
-      });
-    }
-  },
-  async me(req: IReqUser, res: Response) {
-    /**
-     #swagger.security = [{
-      "bearerAuth": []
-     }]
-     */
-    try {
-      const user = req.user;
-      const result = await UserModel.findById(user?.id);
-      res.status(200).json({
-        message: "Success Login",
-        data: result,
-      });
-    } catch (error) {
-      const err = error as unknown as Error;
-      res.status(400).json({
-        message: err.message,
-        data: null,
-      });
-    }
-  },
 };
